syntax = "proto3";

package memos.store;

option go_package = "gen/store";

enum InstanceSettingKey {
  INSTANCE_SETTING_KEY_UNSPECIFIED = 0;
  // BASIC is the key for basic settings.
  BASIC = 1;
  // GENERAL is the key for general settings.
  GENERAL = 2;
  // STORAGE is the key for storage settings.
  STORAGE = 3;
  // MEMO_RELATED is the key for memo related settings.
  MEMO_RELATED = 4;
  // AI is the key for AI related settings.
  AI = 5;
}

message InstanceSetting {
  InstanceSettingKey key = 1;
  oneof value {
    InstanceBasicSetting basic_setting = 2;
    InstanceGeneralSetting general_setting = 3;
    InstanceStorageSetting storage_setting = 4;
    InstanceMemoRelatedSetting memo_related_setting = 5;
    InstanceAISetting ai_setting = 6;
  }
}

message InstanceBasicSetting {
  // The secret key for instance. Mainly used for session management.
  string secret_key = 1;
  // The current schema version of database.
  string schema_version = 2;
}

message InstanceGeneralSetting {
  // disallow_user_registration disallows user registration.
  bool disallow_user_registration = 2;
  // disallow_password_auth disallows password authentication.
  bool disallow_password_auth = 3;
  // additional_script is the additional script.
  string additional_script = 4;
  // additional_style is the additional style.
  string additional_style = 5;
  // custom_profile is the custom profile.
  InstanceCustomProfile custom_profile = 6;
  // week_start_day_offset is the week start day offset from Sunday.
  // 0: Sunday, 1: Monday, 2: Tuesday, 3: Wednesday, 4: Thursday, 5: Friday, 6: Saturday
  // Default is Sunday.
  int32 week_start_day_offset = 7;
  // disallow_change_username disallows changing username.
  bool disallow_change_username = 8;
  // disallow_change_nickname disallows changing nickname.
  bool disallow_change_nickname = 9;
}

message InstanceCustomProfile {
  string title = 1;
  string description = 2;
  string logo_url = 3;
}

message InstanceStorageSetting {
  enum StorageType {
    STORAGE_TYPE_UNSPECIFIED = 0;
    // STORAGE_TYPE_DATABASE is the database storage type.
    DATABASE = 1;
    // STORAGE_TYPE_LOCAL is the local storage type.
    LOCAL = 2;
    // STORAGE_TYPE_S3 is the S3 storage type.
    S3 = 3;
  }
  // storage_type is the storage type.
  StorageType storage_type = 1;
  // The template of file path.
  // e.g. assets/{timestamp}_{filename}
  string filepath_template = 2;
  // The max upload size in megabytes.
  int64 upload_size_limit_mb = 3;
  // The S3 config.
  StorageS3Config s3_config = 4;
}

// Reference: https://developers.cloudflare.com/r2/examples/aws/aws-sdk-go/
message StorageS3Config {
  string access_key_id = 1;
  string access_key_secret = 2;
  string endpoint = 3;
  string region = 4;
  string bucket = 5;
  bool use_path_style = 6;
}

message InstanceMemoRelatedSetting {
  // disallow_public_visibility disallows set memo as public visibility.
  bool disallow_public_visibility = 1;
  // display_with_update_time orders and displays memo with update time.
  bool display_with_update_time = 2;
  // content_length_limit is the limit of content length. Unit is byte.
  int32 content_length_limit = 3;
  // enable_double_click_edit enables editing on double click.
  bool enable_double_click_edit = 4;
  // reactions is the list of reactions.
  repeated string reactions = 7;
}

message InstanceAISetting {
  // openai_base_url is the base URL for OpenAI-compatible embedding API.
  string openai_base_url = 1;
  // openai_embedding_model is the embedding model name.
  string openai_embedding_model = 2;
  // openai_api_key_encrypted stores encrypted API key ciphertext.
  string openai_api_key_encrypted = 3;
  // openai_embedding_max_retry controls max retry count for transient OpenAI embedding failures.
  int32 openai_embedding_max_retry = 4;
  // openai_embedding_retry_backoff_ms controls retry backoff base in milliseconds.
  int32 openai_embedding_retry_backoff_ms = 5;
  // semantic_embedding_concurrency controls concurrent async embedding refresh jobs.
  int32 semantic_embedding_concurrency = 6;
  // openai_embedding_models is the saved model list for quick switching.
  repeated string openai_embedding_models = 7;
  // semantic_reindex_running indicates whether a background semantic reindex task is running.
  bool semantic_reindex_running = 8;
  // semantic_reindex_total is the total memo count for current/last reindex task.
  int32 semantic_reindex_total = 9;
  // semantic_reindex_processed is the processed memo count for current/last reindex task.
  int32 semantic_reindex_processed = 10;
  // semantic_reindex_failed is the failed memo count for current/last reindex task.
  int32 semantic_reindex_failed = 11;
  // semantic_reindex_started_ts is the unix timestamp in seconds when current/last reindex started.
  int64 semantic_reindex_started_ts = 12;
  // semantic_reindex_updated_ts is the unix timestamp in seconds when progress last updated.
  int64 semantic_reindex_updated_ts = 13;
  // semantic_reindex_model is the model used by current/last reindex task.
  string semantic_reindex_model = 14;
}
